# bank.marketing

./: .gitignore  README.md  pyproject.toml
bank_marketing/: eda.ipynb  eda_lib.py  hipoteses_lib.py  regressao_log_lib.py
