[tool.poetry]
name = "bank-marketing"
version = "0.1.0"
description = ""
authors = ["Alexandre Andreo <alexandre.andreo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
seaborn = "^0.13.2"
scipy = "^1.16.3"
statsmodels = "^0.14.6"
scikit-learn = "^1.8.0"
scikit-posthocs = "^0.11.4"
pingouin = "^0.5.5"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
